crates/loxide_interpreter/tests/snapshots/integration@call__num.snap
---
source: crates/loxide_interpreter/tests/integration.rs
expression: result
---
123(); // expect runtime error: Can only call functions and classes.


>>>>> Error Section <<<<<
  × Function call on a non-callable value
   ╭────
 1 │ 123(); // expect runtime error: Can only call functions and classes.
   · ─┬─
   ·  ╰── expect a callable value here, but got type `number`
   ╰────
